fix for alignment

--- a/src/components/footer/Footer.module.sass
+++ b/src/components/footer/Footer.module.sass
@@ -21,6 +21,7 @@ $footer-color: #E2E8F0
         padding: .7em
         display: flex
         justify-content: space-between
+        align-items: center
 
         .copywright 
             color: #9CA3AF
